# weltenfw

./: .gitignore  CHANGELOG.md  Makefile  README.md  adr-health.md  adr-review.md  cascade-auftraege.md  catalog-info.yaml  idea-intake.md  issues-abarbeiten.md  onboard-repo.md  onboard-stack.md  platform-audit.md  process-agent-queue.md  pyproject.toml  session-start.md  ship.md  stack-upgrade.md  sync-repo.md  workflow-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/scripts/: bootstrap_labels.py
.github/workflows/: ci.yml  publish.yml  receive-windsurf-rules.yml  test.yml
.windsurf/rules/: mcp-tools.md
.windsurf/workflows/: adr-challenger.md  adr-curator.md  adr-review.md  adr.md  agent-review.md  agent-session-start.md  agentic-coding.md  create-pdf.md  deploy.md  docu-repo-all.md  docu-update.md  drift-check.md  governance-check.md  hotfix.md  infra-health.md  knowledge-capture.md  pr-review.md  pre-code.md  release.md  repo-health-check.md  session-ende.md  session-start.md  sync-repo.md  use-case.md  windsurf-clean.md  workflow-index.md
src/weltenfw/: __init__.py  _http.py  auth.py  cache.py  client.py  exceptions.py  pagination.py
src/weltenfw/backends/: README.md  __init__.py  base.py  local.py  weltenhub.py
src/weltenfw/django/: __init__.py  app_config.py  cache.py
src/weltenfw/resources/: __init__.py  base.py  characters.py  locations.py  lookups.py  scenes.py  stories.py  tenants.py  worlds.py
src/weltenfw/schema/: __init__.py  base.py  character.py  location.py  lookups.py  scene.py  story.py  tenant.py  world.py
tests/: conftest.py  test_cache.py  test_client.py  test_exceptions.py  test_http_trailing_slash.py  test_pagination.py  test_schema_base.py  test_schemas.py
