[project]
name = "iil-weltenfw"
version = "0.2.0"
description = "WeltenHub Client Framework — typed REST client and Pydantic schemas for the WeltenHub Story Universe API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]
keywords = [
    "weltenhub", "weltenforger", "story", "creative-writing",
    "api-client", "pydantic", "httpx", "iil",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
http2 = [
    "httpx[http2]>=0.27,<1",
]
django = [
    "django>=5.0,<6",
]
authoring = [
    "iil-authoringfw>=0.3,<1",
]
all = [
    "httpx[http2]>=0.27,<1",
    "django>=5.0,<6",
    "iil-authoringfw>=0.3,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.3",
]
testing = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/weltenfw"
Repository = "https://github.com/achimdehnert/weltenfw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weltenfw"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
